--- a/Entra21.CSharp.ClinicaVeterinaria/Entra21.CSharp.ClinicaVeterinaria.Aplicacao/Views/Raca/Index.cshtml
+++ b/Entra21.CSharp.ClinicaVeterinaria/Entra21.CSharp.ClinicaVeterinaria.Aplicacao/Views/Raca/Index.cshtml
@@ -1,5 +1,9 @@
 ﻿<h1>Lista de Raças</h1>
 
+<div>
+    <a href="/raca/cadastrar">Cadastrar</a>
+</div>
+
 <table>
     <thead><!--Cabeçalhoda tabela-->
         <tr><!--Linha da tabela-->
@@ -14,5 +18,6 @@
             <td>Pinscher</td>
             <td>Cachorro</td>
         </tr>
+        
     </tbody>
 </table>
