--- a/Entra21.CSharp.ClinicaVeterinaria/Entra21.CSharp.ClinicaVeterinaria.Aplicacao/Views/Raca/Editar.cshtml
+++ b/Entra21.CSharp.ClinicaVeterinaria/Entra21.CSharp.ClinicaVeterinaria.Aplicacao/Views/Raca/Editar.cshtml
@@ -1,5 +1,12 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
-}
+﻿<h1>Editar Raça</h1>
+
+<form method="post" action="/raca/editar">
+    <label for="campo-nome">Nome:</label>
+    <input type="text" id="campo-nome" name="nome"/>
+    <label for="campo-especie">Espécie:</label>
+    <select id="campo-especie" name="especie">
+        <option value="Cachorro">Cachorro</option>
+        <option value="Gato">Gato</option>
+    </select>
+
+</form>
