--- a/Entra21.CSharp.ClinicaVeterinaria/Entra21.CSharp.ClinicaVeterinaria.Aplicacao/Views/Raca/Index.cshtml
+++ b/Entra21.CSharp.ClinicaVeterinaria/Entra21.CSharp.ClinicaVeterinaria.Aplicacao/Views/Raca/Index.cshtml
@@ -1,10 +1,15 @@
-﻿<h1>Lista de Raças</h1>
+﻿@{
+    Layout = "~/Pages/Shared/_Layout.cshtml";
+}
+
+<h1>Lista de Raças</h1>
 
 <div>
-    <a href="/raca/cadastrar">Cadastrar</a>
+    <a href="/raca/cadastrar"
+    class="btn btn-primary">Cadastrar</a>
 </div>
 
-<table>
+<table class="table table-striped table-bordered">
     <thead><!--Cabeçalhoda tabela-->
         <tr><!--Linha da tabela-->
             <th>Código</th><!--Coluna específica do cabeçalho-->
