--- a/Entra21.CSharp.ClinicaVeterinaria/Entra21.CSharp.ClinicaVeterinaria.Aplicacao/Views/Raca/Index.cshtml
+++ b/Entra21.CSharp.ClinicaVeterinaria/Entra21.CSharp.ClinicaVeterinaria.Aplicacao/Views/Raca/Index.cshtml
@@ -4,27 +4,32 @@
 
 <h1>Lista de Raças</h1>
 
-<div>
-    <a href="/raca/cadastrar"
-    class="btn btn-primary">Cadastrar</a>
+<div class="row">
+    <div class="text-end">
+        <a href="/raca/cadastrar"
+           class="btn btn-primary">Cadastrar</a>
+    </div>
 </div>
 
 <table class="table table-striped table-bordered">
-    <thead><!--Cabeçalhoda tabela-->
-        <tr><!--Linha da tabela-->
+    <thead>
+        <!--Cabeçalhoda tabela-->
+        <tr>
+            <!--Linha da tabela-->
             <th>Código</th><!--Coluna específica do cabeçalho-->
             <th>Nome</th>
             <th>Espécie</th>
         </tr>
     </thead>
-    <tbody><!--Lugar dos registros da tabela-->
-        @foreach(var raca in ViewBag.Racas)
+    <tbody>
+        <!--Lugar dos registros da tabela-->
+        @foreach (var raca in ViewBag.Racas)
         {
-        <tr>
-            <td>@raca.Id</td><!--Coluna específcia para body-->
-            <td>@raca.Nome</td>
-            <td>@raca.Especie</td>
-        </tr>
+            <tr>
+                <td>@raca.Id</td><!--Coluna específcia para body-->
+                <td>@raca.Nome</td>
+                <td>@raca.Especie</td>
+            </tr>
         }
     </tbody>
 </table>
