--- a/Entra21.CSharp.ClinicaVeterinaria/Entra21.CSharp.ClinicaVeterinaria.Aplicacao/Views/Raca/Index.cshtml
+++ b/Entra21.CSharp.ClinicaVeterinaria/Entra21.CSharp.ClinicaVeterinaria.Aplicacao/Views/Raca/Index.cshtml
@@ -4,7 +4,7 @@
 
 <h1>Lista de Raças</h1>
 
-<div class="row">
+<div class="row mb-2">
     <div class="text-end">
         <a href="/raca/cadastrar"
            class="btn btn-primary">Cadastrar</a>
