--- a/Entra21.CSharp.ClinicaVeterinaria/Entra21.CSharp.ClinicaVeterinaria.Aplicacao/Views/Raca/Cadastrar.cshtml
+++ b/Entra21.CSharp.ClinicaVeterinaria/Entra21.CSharp.ClinicaVeterinaria.Aplicacao/Views/Raca/Cadastrar.cshtml
@@ -7,12 +7,14 @@
     <div>
         <label for="campo_nome" class="form-label">
             Nome<span class="text-danger fw-bold">*</span></label>
-        <input type="text" id="campo_nome" name="nome" class="form-control" />
+        <input type="text" id="campo_nome" name="nome" class="form-control"
+            required="required"/>
     </div>
     <div class="mb-3">
         <label for="campo_especie" class="form-label">
             Espécie<span class="text-danger fw-bold">*</span></label>
-        <select id="campo_especie" name="especie" class="form-select">
+        <select id="campo_especie" name="especie" class="form-select" required="required">
+            <option selected="selected" disabled="disabled" value="">Selecione uma opção</option>
             <option value="Cachorro">Cachorro</option>
             <option value="Gato">Gato</option>
         </select>
