--- a/Entra21.CSharp.ClinicaVeterinaria/Entra21.CSharp.ClinicaVeterinaria.Aplicacao/Views/Raca/Index.cshtml
+++ b/Entra21.CSharp.ClinicaVeterinaria/Entra21.CSharp.ClinicaVeterinaria.Aplicacao/Views/Raca/Index.cshtml
@@ -19,6 +19,7 @@
             <th>Código</th><!--Coluna específica do cabeçalho-->
             <th>Nome</th>
             <th>Espécie</th>
+            <th>Ação</th>
         </tr>
     </thead>
     <tbody>
@@ -29,6 +30,9 @@
                 <td>@raca.Id</td><!--Coluna específcia para body-->
                 <td>@raca.Nome</td>
                 <td>@raca.Especie</td>
+                <td>
+                    <a href="/raca/apagar?id=@raca.Id">Apagar</a>
+                </td>
             </tr>
         }
     </tbody>
