Atualização exercicio, finalizado CRUD de raça.

--- a/Entra21.CSharp.ClinicaVeterinaria/Entra21.CSharp.ClinicaVeterinaria.Aplicacao/Views/Raca/Cadastrar.cshtml
+++ b/Entra21.CSharp.ClinicaVeterinaria/Entra21.CSharp.ClinicaVeterinaria.Aplicacao/Views/Raca/Cadastrar.cshtml
@@ -1,5 +1,6 @@
 ﻿@{
     Layout = "~/Pages/Shared/_Layout.cshtml";
+    var especies = ViewBag.Especie as List<string>;
 }
 <h3>Cadastro de raça</h3>
 
@@ -15,8 +16,11 @@
             Espécie<span class="text-danger fw-bold">*</span></label>
         <select id="campo_especie" name="especie" class="form-select" required="required">
             <option selected="selected" disabled="disabled" value="">Selecione uma opção</option>
-            <option value="Cachorro">Cachorro</option>
-            <option value="Gato">Gato</option>
+            @foreach (var especie in especies)
+            {
+                <option value="@especie"
+                    >@especie</option>
+            }
         </select>
     </div>
     <div class="text-end">
