--- a/Entra21.CSharp.ClinicaVeterinaria/Entra21.CSharp.ClinicaVeterinaria.Aplicacao/Views/Raca/Index.cshtml
+++ b/Entra21.CSharp.ClinicaVeterinaria/Entra21.CSharp.ClinicaVeterinaria.Aplicacao/Views/Raca/Index.cshtml
@@ -31,6 +31,7 @@
                 <td>@raca.Nome</td>
                 <td>@raca.Especie</td>
                 <td>
+                    <a href="/raca/editar?id=@raca.Id">Editar</a>
                     <a href="/raca/apagar?id=@raca.Id">Apagar</a>
                 </td>
             </tr>
