Alteração de GET para POST, no Cadastrar e no Alterar

--- a/Entra21.CSharp.ClinicaVeterinaria/Entra21.CSharp.ClinicaVeterinaria.Aplicacao/Views/Raca/Cadastrar.cshtml
+++ b/Entra21.CSharp.ClinicaVeterinaria/Entra21.CSharp.ClinicaVeterinaria.Aplicacao/Views/Raca/Cadastrar.cshtml
@@ -4,7 +4,7 @@
 }
 <h3>Cadastro de raça</h3>
 
-<form action="registrar" method="get">
+<form action="registrar" method="POST">
     <div>
         <label for="campo_nome" class="form-label">
             Nome<span class="text-danger fw-bold">*</span></label>
