--- a/Entra21.CSharp.ClinicaVeterinaria/Entra21.CSharp.ClinicaVeterinaria.Aplicacao/Views/Raca/Cadastrar.cshtml
+++ b/Entra21.CSharp.ClinicaVeterinaria/Entra21.CSharp.ClinicaVeterinaria.Aplicacao/Views/Raca/Cadastrar.cshtml
@@ -1,10 +1,10 @@
 ﻿@{
     Layout = "~/Pages/Shared/_Layout.cshtml";
-    var especies = ViewBag.Especie as List<string>;
+    var especies = ViewBag.Especies as List<string>;
 }
 <h3>Cadastro de raça</h3>
 
-<form action="registrar" method="POST">
+<form action="/raca/cadastrar" method="POST">
     <div>
         <label for="campo_nome" class="form-label">
             Nome<span class="text-danger fw-bold">*</span></label>
