Adicionado validação para RacaViewModel - Refatorado para utilizar comandos asp-helpers no cshtml

--- a/Entra21.CSharp.ClinicaVeterinaria/Entra21.CSharp.ClinicaVeterinaria.Aplicacao/Views/Raca/Editar.cshtml
+++ b/Entra21.CSharp.ClinicaVeterinaria/Entra21.CSharp.ClinicaVeterinaria.Aplicacao/Views/Raca/Editar.cshtml
@@ -1,4 +1,4 @@
-﻿@using Entra21.CSharp.ClinicaVeterinaria.Repositorio.Entidades
+﻿@*@using Entra21.CSharp.ClinicaVeterinaria.Repositorio.Entidades
 @{
     Layout = "~/Pages/Shared/_Layout.cshtml";
     var raca = ViewBag.Raca as Raca;
@@ -35,3 +35,4 @@
     </div>
 
 </form>
+*@
