--- a/Entra21.CSharp.ClinicaVeterinaria/Entra21.CSharp.ClinicaVeterinaria.Aplicacao/Views/Raca/Index.cshtml
+++ b/Entra21.CSharp.ClinicaVeterinaria/Entra21.CSharp.ClinicaVeterinaria.Aplicacao/Views/Raca/Index.cshtml
@@ -1,12 +1,10 @@
-﻿@{
-    Layout = "~/Pages/Shared/_Layout.cshtml";
-}
+﻿@model List<Raca>
 
 <h1>Lista de Raças</h1>
 
 <div class="row mb-2">
     <div class="text-end">
-        <a href="/raca/cadastrar"
+        <a asp-action="cadastrar"
            class="btn btn-primary">Cadastrar</a>
     </div>
 </div>
@@ -31,8 +29,8 @@
                 <td>@raca.Nome</td>
                 <td>@raca.Especie</td>
                 <td>
-                    <a href="/raca/editar?id=@raca.Id">Editar</a>
-                    <a href="/raca/apagar?id=@raca.Id">Apagar</a>
+                    <a asp-action="editar" asp-route-id="@raca.Id">Editar</a>
+                    <a asp-action="apagar" asp-route-id="@raca.Id">Apagar</a>
                 </td>
             </tr>
         }
