--- a/Entra21.CSharp.ClinicaVeterinaria/Entra21.CSharp.ClinicaVeterinaria.Aplicacao/Views/_ViewImports.cshtml
+++ b/Entra21.CSharp.ClinicaVeterinaria/Entra21.CSharp.ClinicaVeterinaria.Aplicacao/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using Entra21.CSharp.ClinicaVeterinaria.Aplicacao
+@using Entra21.CSharp.ClinicaVeterinaria.Repositorio.Entidades
 @namespace Entra21.CSharp.ClinicaVeterinaria.Aplicacao.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
