--- a/Entra21.CSharp.ClinicaVeterinaria/Entra21.CSharp.ClinicaVeterinaria.Aplicacao/Pages/Index.cshtml
+++ b/Entra21.CSharp.ClinicaVeterinaria/Entra21.CSharp.ClinicaVeterinaria.Aplicacao/Pages/Index.cshtml
@@ -6,5 +6,5 @@
 
 <div class="text-center">
     <h1 class="display-4">Seja bem vindo a Clínica Veterinária 2 irmãos!</h1>
-    <p>VAI CORINTHIANS! <a></a>.</p>
+    <p>VAI CORINTHIANS! <a></a></p>
 </div>
