--- a/Entra21.CSharp.ClinicaVeterinaria/Entra21.CSharp.ClinicaVeterinaria.Aplicacao/Views/Raca/Editar.cshtml
+++ b/Entra21.CSharp.ClinicaVeterinaria/Entra21.CSharp.ClinicaVeterinaria.Aplicacao/Views/Raca/Editar.cshtml
@@ -7,7 +7,7 @@
 
     var selectDasEspecies = new SelectList(especies, string.Empty);
 }
-<h3>Cadastro de Raça</h3>
+<h3>Edição de Raça</h3>
 
 <form asp-action="editar" method="POST">
     <input type="hidden" asp-for="Id"/>
