Criado EntidadeBase e Veterinario

--- a/Entra21.CSharp.ClinicaVeterinaria/Entra21.CSharp.ClinicaVeterinaria.Aplicacao/Views/Raca/Cadastrar.cshtml
+++ b/Entra21.CSharp.ClinicaVeterinaria/Entra21.CSharp.ClinicaVeterinaria.Aplicacao/Views/Raca/Cadastrar.cshtml
@@ -1,4 +1,4 @@
-﻿@model Entra21.CSharp.ClinicaVeterinaria.Servico.ViewModels.RacaCadastrarViewModel
+﻿@model RacaCadastrarViewModel
 
 @{
     Layout = "~/Pages/Shared/_Layout.cshtml";
