--- a/Entra21.CSharp.ClinicaVeterinaria/Entra21.CSharp.ClinicaVeterinaria.Aplicacao/Views/Raca/Editar.cshtml
+++ b/Entra21.CSharp.ClinicaVeterinaria/Entra21.CSharp.ClinicaVeterinaria.Aplicacao/Views/Raca/Editar.cshtml
@@ -1,4 +1,4 @@
-﻿@model Entra21.CSharp.ClinicaVeterinaria.Servico.ViewModels.RacaEditarViewModel
+﻿@model RacaEditarViewModel
 
 @{
     Layout = "~/Pages/Shared/_Layout.cshtml";
